--- a/html/catalogue.html
+++ b/html/catalogue.html
@@ -87,22 +87,19 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html"
+                <a class="nav-link" aria-current="page" href="../index.html"
                   >Accueil</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html"
+                <a class="nav-link" aria-current="page" href="#accessoires"
                   >Accessoires</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Décorations</a>
+                <a class="nav-link" href="#deco">Décorations</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#deco"> Vêtements</a>
-              </li>
-              <!-- <li class="nav-item dropdown">
+              <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle"
                   href="#"
@@ -113,12 +110,17 @@
                   Vêtements
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Chaussures</a></li>
-                  <li><a class="dropdown-item" href="#">Robes</a></li>
-                  <li><a class="dropdown-item" href="#">Pantalons</a></li>
-                  <li><a class="dropdown-item" href="#">T-shirt</a></li>
+                  <li><a class="dropdown-item" href="#chaussure">Chaussures</a></li>
+                  <li><a class="dropdown-item" href="#robe">Robes</a></li>
+                  <li><a class="dropdown-item" href="#pantalon">Pantalons</a></li>
+                  <li><a class="dropdown-item" href="#gilet">T-shirt</a></li>
                 </ul>
-              </li> -->
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="../html/contact.html"
+                  >Contact</a
+                >
+              </li>
             </ul>
             <form class="d-flex" role="search">
               <input
@@ -273,7 +275,7 @@
                   <p class="product-condition">État : <span class="condition-label">Neuf</span></p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div></div>
-                    <button class="btn-cta" id="vetement">Voir le produit</button>
+                    <button class="btn-cta" id="gilet">Voir le produit</button>
                   </div>
                 </div>
               </div>
@@ -292,7 +294,7 @@
                   <p class="product-condition">État : <span class="condition-label">Très bon état</span></p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div></div>
-                    <button class="btn-cta">Voir le produit</button>
+                    <button class="btn-cta" id="robe">Voir le produit</button>
                   </div>
                 </div>
               </div>
@@ -312,7 +314,7 @@
                <p class="product-condition">État : <span class="condition-label">Très bon état</span></p>
                <div class="d-flex justify-content-between align-items-center">
                  <div></div>
-                 <button class="btn-cta">Voir le produit</button>
+                 <button class="btn-cta" id="pantalon">Voir le produit</button>
                </div>
              </div>
            </div>
