--- a/html/favoris.html
+++ b/html/favoris.html
@@ -45,32 +45,41 @@
     />
     <!-- Icones Bootstrap -->
     <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
     <!-- Animate CSS -->
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <!-- AOS Library -->
     <link
-    href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css"
-    rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css"
+      rel="stylesheet"
     />
     <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/cd8dd3426c.js" crossorigin="anonymous">
-    </script>
+    <script
+      src="https://kit.fontawesome.com/cd8dd3426c.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- Own Style -->
     <link rel="stylesheet" href="../css/favoris.css" />
   </head>
   <body>
     <!------------------------------------------------------------------ NAVBAR -------------------------------------------------------->
+    <!------------------------------------------------------------------ NAVBAR -------------------------------------------------------->
+    <!------------------------------------------------------------------ NAVBAR -------------------------------------------------------->
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand logo" href="#">
-            <img src="../img/logo.png" alt="Bootstrap" width="70" height="auto" />
+          <a class="navbar-brand logo" href="../index.html">
+            <img
+              src="../img/logo.png"
+              alt="Bootstrap"
+              width="70"
+              height="auto"
+            />
           </a>
 
           <button
@@ -87,25 +96,25 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html"
+                <a class="nav-link" aria-current="page" href="../index.html"
                   >Accueil</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html"
+                <a
+                  class="nav-link"
+                  aria-current="page"
+                  href="catalogue.html#accessoires"
                   >Accessoires</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Décorations</a>
+                <a class="nav-link" href="catalogue.html#deco">Décorations</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#"> Vêtements</a>
-              </li>
-              <!-- <li class="nav-item dropdown">
+              <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle"
-                  href="#"
+                  href="catalogue.html"
                   role="button"
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
@@ -113,12 +122,33 @@
                   Vêtements
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Chaussures</a></li>
-                  <li><a class="dropdown-item" href="#">Robes</a></li>
-                  <li><a class="dropdown-item" href="#">Pantalons</a></li>
-                  <li><a class="dropdown-item" href="#">T-shirt</a></li>
+                  <li>
+                    <a class="dropdown-item" href="catalogue.html#chaussure"
+                      >Chaussures</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="catalogue.html#vetement"
+                      >Robes</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="catalogue.html#vetement"
+                      >Pantalons</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="catalogue.html#vetement"
+                      >T-shirt</a
+                    >
+                  </li>
                 </ul>
-              </li> -->
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="contact.html"
+                  >Contact</a
+                >
+              </li>
             </ul>
             <form class="d-flex" role="search">
               <input
@@ -127,170 +157,225 @@
                 placeholder="Recherchez un article"
                 aria-label="Search"
               />
-              <a href="html/profil.html">
+              <a href="favoris.html">
                 <i class="fa-solid fa-star icnsmenu"></i
               ></a>
-              <a href="html/profil.html">
+              <a href="profil.html">
                 <i class="fa-solid fa-user icnsmenu"></i
               ></a>
-              <a href="html/profil.html"
+              <a href="../index.html"
                 ><i class="fa-solid fa-cart-shopping icnsmenu"></i
               ></a>
-              <button type="button" class="btn gap-2 connexionbtn">
-                Se connecter/ S'inscrire
-              </button>
+              <a href="inscription.html" style="text-decoration: none"
+                ><button type="button" class="btn gap-2 connexionbtn">
+                  Se connecter/ S'inscrire
+                </button></a
+              >
             </form>
           </div>
         </div>
       </nav>
     </header>
-      <!------------------------------------------------------------------ FIN NAVBAR -------------------------------------------------------->  
+    <!------------------------------------------------------------------ NAVBAR -------------------------------------------------------->
+    <!------------------------------------------------------------------ NAVBAR -------------------------------------------------------->
+    <!------------------------------------------------------------------ FIN NAVBAR -------------------------------------------------------->
     <!-- MAIN CONTENT -->
     <div class="parallaxv" style="min-height: 200px"></div>
     <main>
-        <div class="container">
-            <h1>Vos Annonces Favoris</h1>
+      <div class="container">
+        <h1>Vos Annonces Favoris</h1>
 
-            <!-- Liste des favoris -->
-            <div class="product-cards">
-                <!-- Annonce 1 -->
-                <div class="product-card">
-                    <img src="https://via.placeholder.com/300" alt="Image de l'annonce">
-                    <div class="product-info">
-                        <h3 class="product-card-title">Titre de l'Annonce 1</h3>
-                        <p class="product-price">€120</p>
-                        <button class="remove-favorite">Retirer des favoris</button>
-                    </div>
-                </div>
-
-                <!-- Annonce 2 -->
-                <div class="product-card">
-                    <img src="https://via.placeholder.com/300" alt="Image de l'annonce">
-                    <div class="product-info">
-                        <h3 class="product-card-title">Titre de l'Annonce 2</h3>
-                        <p class="product-price">€85</p>
-                        <button class="remove-favorite">Retirer des favoris</button>
-                    </div>
-                </div>
-
-                <!-- Annonce 3 -->
-                <div class="product-card">
-                    <img src="https://via.placeholder.com/300" alt="Image de l'annonce">
-                    <div class="product-info">
-                        <h3 class="product-card-title">Titre de l'Annonce 3</h3>
-                        <p class="product-price">€150</p>
-                        <button class="remove-favorite">Retirer des favoris</button>
-                    </div>
-                </div>
-
-                <!-- Vous pouvez ajouter d'autres cartes ici -->
+        <!-- Liste des favoris -->
+        <div class="product-cards">
+          <!-- Annonce 1 -->
+          <div class="product-card">
+            <img
+              src="https://via.placeholder.com/300"
+              alt="Image de l'annonce"
+            />
+            <div class="product-info">
+              <h3 class="product-card-title">Titre de l'Annonce 1</h3>
+              <p class="product-price">€120</p>
+              <button class="remove-favorite">Retirer des favoris</button>
             </div>
+          </div>
+
+          <!-- Annonce 2 -->
+          <div class="product-card">
+            <img
+              src="https://via.placeholder.com/300"
+              alt="Image de l'annonce"
+            />
+            <div class="product-info">
+              <h3 class="product-card-title">Titre de l'Annonce 2</h3>
+              <p class="product-price">€85</p>
+              <button class="remove-favorite">Retirer des favoris</button>
+            </div>
+          </div>
+
+          <!-- Annonce 3 -->
+          <div class="product-card">
+            <img
+              src="https://via.placeholder.com/300"
+              alt="Image de l'annonce"
+            />
+            <div class="product-info">
+              <h3 class="product-card-title">Titre de l'Annonce 3</h3>
+              <p class="product-price">€150</p>
+              <button class="remove-favorite">Retirer des favoris</button>
+            </div>
+          </div>
+
+          <!-- Vous pouvez ajouter d'autres cartes ici -->
         </div>
+      </div>
     </main>
-<!--------------------------------------------------------------------------------------------- FOOTER ------------------------------------------------>
-<div class="parallaxv" style="min-height: 100px"></div>   
+    <div class="parallaxv" style="min-height: 100px"></div>
+    <!--------------------------------------------------------------------------------------------- FOOTER ------------------------------------------------>
+    <!-------------------------------------------------------- FOOTERRR ------------------------------------------------------------------------->
+    <footer class="text-white py-4">
+      <div class="container">
+        <div class="row">
+          <!-- Colonne 1 : Pages principales -->
+          <div class="col-sm-6 col-md-3 mb-3">
+            <h5 class="footerh5">Pages principales</h5>
+            <ul class="list-unstyled">
+              <li>
+                <a
+                  href="../index.html"
+                  class="footer-link animate__animated animate__fadeIn"
+                  >Accueil</a
+                >
+              </li>
+              <li>
+                <a
+                  href="catalogue.html#accessoires"
+                  class="footer-link animate__animated animate__fadeIn"
+                  >Accessoires</a
+                >
+              </li>
+              <li>
+                <a
+                  href="catalogue.html#deco"
+                  class="footer-link animate__animated animate__fadeIn"
+                  >Décorations</a
+                >
+              </li>
+              <li>
+                <a
+                  href="catalogue.html#vetement"
+                  class="footer-link animate__animated animate__fadeIn"
+                  >Vêtements</a
+                >
+              </li>
+              <li>
+                <a
+                  href="contact.html"
+                  class="footer-link animate__animated animate__fadeIn"
+                  >Contact</a
+                >
+              </li>
+            </ul>
+          </div>
 
-<footer
-class="py-4"
-style="background-color: #1c1c1c; color: #ffffff; text-align: center"
->
-<div class="container">
-  <div class="row">
-    <!-- Section Contact -->
-    <div class="col-md-4 mb-3">
-      <h5 style="color: #ffffff; font-size: 1.9rem">Contact</h5>
-      <ul class="list-unstyled">
-        <li>
-          <a href="mailto:cineflix@gmail.com" class="contactt"
-            >restyle@entreprise.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+33623568955" class="contactt"
-            >+33 2 23 56 89 55</a
-          >
-        </li>
-      </ul>
-    </div>
+          <!-- Colonne 2 : Informations de contact -->
+          <div class="col-sm-6 col-md-3 mb-3">
+            <h5 class="footerh5">Contact</h5>
+            <ul class="list-unstyled mailtel">
+              <li>
+                <a href="mailto:restyle@entreprise.com"
+                  ><i class="fas fa-envelope"></i> restyle@entreprise.com</a
+                >
+              </li>
+              <li>
+                <a href="tel:+33223568955"
+                  ><i class="fas fa-phone"></i> +33 2 23 56 89 55</a
+                >
+              </li>
+              <li>
+                <i class="fas fa-map-marker-alt"></i> 25 rue des Arts 76000
+                Rouen
+              </li>
+            </ul>
+          </div>
 
-    <!-- Section rsx -->
-    <div class="col-md-4 mb-3" style="color: #ffffff; text-align: center">
-      <h5 style="color: #ffffff; font-size: 1.9rem">Réseaux-sociaux</h5>
-      <ul
-        class="list-unstyled d-flex gap-3"
-        style="text-align: center; justify-content: center"
-      >
-        <li style="text-align: center">
-          <a
-            href="https://www.facebook.com/groups/448485336360350"
-            target="_blank"
-            style="text-align: center"
-          >
-            <i class="bi bi-facebook rsxx"></i>
-          </a>
-        </li>
-        <li>
-          <a
-            href="https://www.instagram.com/"
-            target="_blank"
-            style="text-align: center"
-          >
-            <i class="bi bi-instagram rsxx"></i>
-          </a>
-        </li>
-        <li>
-          <a
-            href="https://x.com/"
-            target="_blank"
-            style="text-align: center"
-          >
-            <i class="bi bi-twitter-x rsxx"></i>
-          </a>
-        </li>
-      </ul>
-    </div>
+          <!-- Colonne 3 : Réseaux sociaux -->
+          <div class="col-sm-6 col-md-3 mb-3">
+            <h5 class="footerh5">Suivez-nous</h5>
+            <div class="social-icons">
+              <a href="#" class="footer-icon animate__animated animate__flash">
+              </a>
+              <a
+                href="https://www.facebook.com/"
+                class="footer-icon animate__animated animate__flash"
+                target="_blank"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
+              <a
+                href="https://x.com/?lang=fr"
+                target="_blank"
+                class="footer-icon animate__animated animate__flash"
+                ><i class="bi bi-twitter-x"></i
+              ></a>
 
-    <!-- Section mentions -->
-    <div class="col-md-4">
-      <h5 style="color: #ffffff; font-size: 1.9rem">Informations</h5>
-      <ul class="list-unstyled">
-        <li>
-          <a href="mentionslegales.html" class="infoo" target="_blank"
-            >Mentions légales</a
-          >
-        </li>
-        <li>
-          <a href="politiquedeco.html" class="infoo" target="_blank"
-            >Politique de confidentialité</a
-          >
-        </li>
-      </ul>
-    </div>
-  </div>
+              <a
+                href="https://www.prod.instagram.com/"
+                target="_blank"
+                class="footer-icon animate__animated animate__flash"
+                ><i class="fab fa-instagram"></i
+              ></a>
+            </div>
+          </div>
 
-  <!-- Ligne de séparation -->
-  <hr class="bg-secondary my-3" style="color: #f70776" />
-
-  <!-- Copyright -->
-  <div class="text-center">
-    <p style="font-size: 15px">© 2024 ReStyle. Tous droits réservés.</p>
-  </div>
-</div>
-</footer>
-
-<!---------------------------------------------------------------- footer --------------------------------------------------------------------------------------->
-<!------------------------------------------------------------------ JAVA -------------------------------------------------------->
-<!-- Bootstrap JS -->
-<script
-src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-crossorigin="anonymous"
-></script>
-<!-- AOS Library -->
-<script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
-<script>
-AOS.init();
-</script>
-<!------------------------------------------------------------------ FIN JAVA -------------------------------------------------------->
-</body>
+          <!-- Colonne 4 : Mentions légales -->
+          <div class="col-sm-6 col-md-3 mb-3">
+            <h5 class="footerh5">Informations</h5>
+            <ul class="list-unstyled">
+              <li>
+                <a
+                  href="contact.html#faq"
+                  class="footer-link animate__animated animate__fadeIn"
+                  >FAQ</a
+                >
+              </li>
+              <li>
+                <a
+                  href="mentionslegales.html"
+                  class="footer-link animate__animated animate__fadeIn"
+                  target="_blank"
+                  >Mentions légales</a
+                >
+              </li>
+              <li>
+                <a
+                  href="politiquedeco.html"
+                  class="footer-link animate__animated animate__fadeIn"
+                  target="_blank"
+                  >Politique de confidentialité</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- Bas du footer -->
+        <div class="text-center mt-4">
+          <p>&copy; 2024 ReStyle. Tous droits réservés.</p>
+        </div>
+      </div>
+    </footer>
+    <!---------------------------------------------------------------- footer --------------------------------------------------------------------------------------->
+    <!------------------------------------------------------------------ JAVA -------------------------------------------------------->
+    <!-- Bootstrap JS -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <!-- AOS Library -->
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+    <!------------------------------------------------------------------ FIN JAVA -------------------------------------------------------->
+  </body>
 </html>
