--- a/html/catalogue.html
+++ b/html/catalogue.html
@@ -101,23 +101,17 @@
                 >
               </li>
               <li class="nav-item">
-<<<<<<< HEAD
+
                 <a
                   class="nav-link"
                   aria-current="page"
-                  href="catalogue.html#accessoires"
-=======
-                <a class="nav-link" aria-current="page" href="#accessoires"
->>>>>>> 4ccd866a567467f821a2dc4f070493d551865ce4
-                  >Accessoires</a
+                  href="catalogue.html#accessoires">
+                <a class="nav-link" aria-current="page" href="#accessoires">Accessoires</a
                 >
               </li>
               <li class="nav-item">
-<<<<<<< HEAD
                 <a class="nav-link" href="catalogue.html#deco">Décorations</a>
-=======
                 <a class="nav-link" href="#deco">Décorations</a>
->>>>>>> 4ccd866a567467f821a2dc4f070493d551865ce4
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -130,7 +124,6 @@
                   Vêtements
                 </a>
                 <ul class="dropdown-menu">
-<<<<<<< HEAD
                   <li>
                     <a class="dropdown-item" href="catalogue.html#chaussure"
                       >Chaussures</a
@@ -154,8 +147,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="contact.html"
-=======
+                <a class="nav-link" aria-current="page" href="contact.html"></a>
                   <li><a class="dropdown-item" href="#chaussure">Chaussures</a></li>
                   <li><a class="dropdown-item" href="#robe">Robes</a></li>
                   <li><a class="dropdown-item" href="#pantalon">Pantalons</a></li>
@@ -164,7 +156,7 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="../html/contact.html"
->>>>>>> 4ccd866a567467f821a2dc4f070493d551865ce4
+
                   >Contact</a
                 >
               </li>
@@ -403,8 +395,6 @@
               </div>
             </div>
           </div>
-=======
-          
             <!-- Produit 4 -->
             <div class="col-12 col-md-6 col-lg-3" data-aos="fade-up" data-aos-duration="400">
               <div class="card product-card">
@@ -472,7 +462,6 @@
         <div class="d-flex justify-content-between align-items-center">
           <h5 class="product-card-title">Pantalon classique</h5>
           <button class="btn-favorite"><i class="fas fa-star"></i></button>
->>>>>>> 4ccd866a567467f821a2dc4f070493d551865ce4
         </div>
 
         <!-- Produit 6 -->
