--- a/html/catalogue.html
+++ b/html/catalogue.html
@@ -101,17 +101,15 @@
                 >
               </li>
               <li class="nav-item">
-
                 <a
                   class="nav-link"
                   aria-current="page"
-                  href="catalogue.html#accessoires">
-                <a class="nav-link" aria-current="page" href="#accessoires">Accessoires</a
+                  href="catalogue.html#accessoires"
+                  >Accessoires</a
                 >
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="catalogue.html#deco">Décorations</a>
-                <a class="nav-link" href="#deco">Décorations</a>
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -147,16 +145,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="contact.html"></a>
-                  <li><a class="dropdown-item" href="#chaussure">Chaussures</a></li>
-                  <li><a class="dropdown-item" href="#robe">Robes</a></li>
-                  <li><a class="dropdown-item" href="#pantalon">Pantalons</a></li>
-                  <li><a class="dropdown-item" href="#gilet">T-shirt</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="../html/contact.html"
-
+                <a class="nav-link" aria-current="page" href="contact.html"
                   >Contact</a
                 >
               </li>
@@ -333,7 +322,6 @@
                 <button class="btn-cta">Voir le produit</button>
               </div>
             </div>
-<<<<<<< HEAD
           </div>
         </div>
 
@@ -395,73 +383,113 @@
               </div>
             </div>
           </div>
-            <!-- Produit 4 -->
-            <div class="col-12 col-md-6 col-lg-3" data-aos="fade-up" data-aos-duration="400">
-              <div class="card product-card">
-                <img src="../img/catalogue/converse.jpg" alt="Paire de converse à motif fleurie"/>
-                <div class="p-3">
-                  <div class="d-flex justify-content-between align-items-center">
-                    <h5 class="product-card-title">Converses fleuries</h5>
-                    <button class="btn-favorite"><i class="fas fa-star"></i></button>
-                  </div>
-                  <p class="category-label">Catégorie: Chaussures</p>
-                  <p class="product-price">59,99€</p>
-                  <p class="product-condition">État : <span class="condition-label">Neuf</span></p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div></div>
-                    <button class="btn-cta" id="gilet">Voir le produit</button>
-                  </div>
+          <!-- Produit 4 -->
+          <div
+            class="col-12 col-md-6 col-lg-3"
+            data-aos="fade-up"
+            data-aos-duration="400"
+          >
+            <div class="card product-card">
+              <img
+                src="../img/catalogue/converse.jpg"
+                alt="Paire de converse à motif fleurie"
+              />
+              <div class="p-3">
+                <div class="d-flex justify-content-between align-items-center">
+                  <h5 class="product-card-title">Converses fleuries</h5>
+                  <button class="btn-favorite">
+                    <i class="fas fa-star"></i>
+                  </button>
+                </div>
+                <p class="category-label">Catégorie: Chaussures</p>
+                <p class="product-price">59,99€</p>
+                <p class="product-condition">
+                  État : <span class="condition-label">Neuf</span>
+                </p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div></div>
+                  <button class="btn-cta" id="gilet">Voir le produit</button>
                 </div>
               </div>
             </div>
-            <!-- Produit 5 -->
-            <div class="col-12 col-md-6 col-lg-3" data-aos="fade-up" data-aos-duration="500" >
-              <div class="card product-card">
-                <img src="../img/catalogue/gilet.jpg" alt="Gilet en laine"/>
-                <div class="p-3">
-                  <div class="d-flex justify-content-between align-items-center">
-                    <h5 class="product-card-title">Gilet en laine</h5>
-                    <button class="btn-favorite"><i class="fas fa-star"></i></button>
-                  </div>
-                  <p class="category-label">Catégorie: Vêtements</p>
-                  <p class="product-price">39,99€</p>
-                  <p class="product-condition">État : <span class="condition-label">Très bon état</span></p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div></div>
-                    <button class="btn-cta" id="robe">Voir le produit</button>
-                  </div>
+          </div>
+          <!-- Produit 5 -->
+          <div
+            class="col-12 col-md-6 col-lg-3"
+            data-aos="fade-up"
+            data-aos-duration="500"
+          >
+            <div class="card product-card">
+              <img src="../img/catalogue/gilet.jpg" alt="Gilet en laine" />
+              <div class="p-3">
+                <div class="d-flex justify-content-between align-items-center">
+                  <h5 class="product-card-title">Gilet en laine</h5>
+                  <button class="btn-favorite">
+                    <i class="fas fa-star"></i>
+                  </button>
+                </div>
+                <p class="category-label">Catégorie: Vêtements</p>
+                <p class="product-price">39,99€</p>
+                <p class="product-condition">
+                  État : <span class="condition-label">Très bon état</span>
+                </p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div></div>
+                  <button class="btn-cta" id="robe">Voir le produit</button>
                 </div>
               </div>
             </div>
+          </div>
 
-            <!-- Produit 6 -->
-            <div class="col-12 col-md-6 col-lg-3" data-aos="fade-up" data-aos-duration="600">
-             <div class="card product-card">
+          <!-- Produit 6 -->
+          <div
+            class="col-12 col-md-6 col-lg-3"
+            data-aos="fade-up"
+            data-aos-duration="600"
+          >
+            <div class="card product-card">
               <img src="../img/catalogue/robe.jpg" alt="Robe élégante" />
               <div class="p-3">
                 <div class="d-flex justify-content-between align-items-center">
-                 <h5 class="product-card-title">Robe élégante</h5>
-                 <button class="btn-favorite"><i class="fas fa-star"></i></button>
-               </div>
-               <p class="category-label">Catégorie: Vêtements</p>
-               <p class="product-price">89,99€</p>
-               <p class="product-condition">État : <span class="condition-label">Très bon état</span></p>
-               <div class="d-flex justify-content-between align-items-center">
-                 <div></div>
-                 <button class="btn-cta" id="pantalon">Voir le produit</button>
-               </div>
-             </div>
-           </div>
-         </div>
+                  <h5 class="product-card-title">Robe élégante</h5>
+                  <button class="btn-favorite">
+                    <i class="fas fa-star"></i>
+                  </button>
+                </div>
+                <p class="category-label">Catégorie: Vêtements</p>
+                <p class="product-price">89,99€</p>
+                <p class="product-condition">
+                  État : <span class="condition-label">Très bon état</span>
+                </p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div></div>
+                  <button class="btn-cta" id="pantalon">Voir le produit</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
 
-  <!-- Produit 7 -->
-  <div class="col-12 col-md-6 col-lg-3" data-aos="fade-up" data-aos-duration="700">
-    <div class="card product-card">
-      <img src="../img/catalogue/pantalon.jpg" alt="Pantalon en jean classique bleu" />
-      <div class="p-3">
-        <div class="d-flex justify-content-between align-items-center">
-          <h5 class="product-card-title">Pantalon classique</h5>
-          <button class="btn-favorite"><i class="fas fa-star"></i></button>
+        <!-- Produit 7 -->
+        <div
+          class="col-12 col-md-6 col-lg-3"
+          data-aos="fade-up"
+          data-aos-duration="700"
+        >
+          <div class="card product-card">
+            <img
+              src="../img/catalogue/pantalon.jpg"
+              alt="Pantalon en jean classique bleu"
+            />
+            <div class="p-3">
+              <div class="d-flex justify-content-between align-items-center">
+                <h5 class="product-card-title">Pantalon classique</h5>
+                <button class="btn-favorite">
+                  <i class="fas fa-star"></i>
+                </button>
+              </div>
+            </div>
+          </div>
         </div>
 
         <!-- Produit 6 -->
