--- a/html/catalogue.html
+++ b/html/catalogue.html
@@ -246,7 +246,7 @@
                   <p class="product-condition">État : <span class="condition-label">Neuf</span></p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div></div>
-                    <button class="btn-cta">Voir le produit</button>
+                    <a href="chausel.html"><button class="btn-cta">Voir le produit</button></a>
                   </div>
                 </div>
               </div>
@@ -306,7 +306,7 @@
                   <p class="product-condition">État : <span class="condition-label">Neuf</span></p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div></div>
-                    <button class="btn-cta" id="gilet">Voir le produit</button>
+                    <button class="btn-cta" id="vetement">Voir le produit</button>
                   </div>
                 </div>
               </div>
@@ -325,7 +325,7 @@
                   <p class="product-condition">État : <span class="condition-label">Très bon état</span></p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div></div>
-                    <button class="btn-cta" id="robe">Voir le produit</button>
+                    <a href="gilet.html"><button class="btn-cta">Voir le produit</button></a>
                   </div>
                 </div>
               </div>
@@ -405,7 +405,7 @@
         <p class="product-condition">État : <span class="condition-label">Bon état</span></p>
         <div class="d-flex justify-content-between align-items-center">
           <div></div>
-          <button class="btn-cta">Voir le produit</button>
+          <a href="saccuir.html"><button class="btn-cta">Voir le produit</button></a>
         </div>
       </div>
     </div>
@@ -485,7 +485,7 @@
         <p class="product-condition">État : <span class="condition-label">Très bon état</span></p>
         <div class="d-flex justify-content-between align-items-center">
           <div></div>
-          <button class="btn-cta">Voir le produit</button>
+          <a href="vase.html"><button class="btn-cta">Voir le produit</button></a>
         </div>
       </div>
     </div>
