--- a/html/profil.html
+++ b/html/profil.html
@@ -174,7 +174,11 @@
     <!------------------------------------------------------------------ NAVBAR -------------------------------------------------------->
     <div class="parallaxv" style="min-height: 200px"></div>
 
-    <section class="container my-5">
+    <section
+      class="container my-5"
+      data-aos="fade-up"
+      data-aos-anchor-placement="top-bottom"
+    >
       <div class="row justify-content-center">
         <!-- Colonne pour la photo de profil et les informations de base -->
         <div class="col-md-4 text-center">
