--- a/html/chausel.html
+++ b/html/chausel.html
@@ -148,7 +148,8 @@
     <!------------------------------------------------------------------ Hero section -------------------------------------------------------->
     <!------------------------------------------CONTAINERRR--------------------------------------->
     <div class="parallaxv" style="min-height: 200px"></div>
-     <div class="container py-5">
+     <div class="container py-5"data-aos="fade-up"
+     data-aos-anchor-placement="top-bottom">
         <div class="row">
           <div class="col-12 col-sm-12 col-md-6">
             <img
@@ -156,6 +157,7 @@
               class="card-img-top"
               alt="Produit d'occasion"
               style="max-height: 400px; object-fit: cover"
+              
             />
           </div>
               <!-- Détails du produit -->
