--- a/html/contact.html
+++ b/html/contact.html
@@ -153,11 +153,11 @@
     <!------------------------------------------------------------------ FIN MAIN -------------------------------------------------------->
     <!---------------------------------------------------------- Formulaire -------------------------------------------------------->
 
-    <div class="container">
+    <div class="container"data-aos="fade-up" data-aos-duration="1000">
       <div class="formulaire" style="padding-bottom: 50px;">
-        <h2 style="text-align: center; color: #ffffff; padding: 50px;">
+        <h1 style="text-align: center; color: #ffffff; padding: 50px;">
           Nous Contacter
-        </h2>
+        </h1>
         <div class="form-floating">
           <input
             type="text"
@@ -196,7 +196,7 @@
     </div>
     <!---------------------------------------------------------- FAQQQQQ -------------------------------------------------------->
       <div class="parallaxv" style="min-height: 80px;" id="faq"></div>
-      <div class="faq" style="padding-top: 30px; padding-bottom: 100px;">
+      <div class="faq" style="padding-top: 30px; padding-bottom: 100px;"data-aos="fade-up" data-aos-duration="1000">
         <h2 style="text-align: center;color: #ffffff;"> FAQ</h2> <br>z
         <div class="accordion" id="accordionExample">
             <div class="accordion-item">
@@ -276,7 +276,7 @@
      <!---------------------------------------------------------- Contact -------------------------------------------------------->
      <div class="parallaxv" style="min-height: 50px"></div>
 
-     <div class="contactc" style="padding-top: 50px; padding-bottom: 50px;display: flex; justify-content: center;">
+     <div class="contactc" style="padding-top: 50px; padding-bottom: 50px;display: flex; justify-content: center;"data-aos="fade-up" data-aos-duration="1000">
      <div class="card" style="width: 30rem; align-items: center;">
         <div class="card-body">
           <h5 class="card-title" style="text-align: center; font-size: 30px; color: #c4236e;font-weight: 800;">Informations de Contact</h5>
