--- a/html/saccuir.html
+++ b/html/saccuir.html
@@ -148,7 +148,8 @@
     <!------------------------------------------------------------------ Hero section -------------------------------------------------------->
     <!------------------------------------------CONTAINERRR--------------------------------------->
     <div class="parallaxv" style="min-height: 200px"></div>
-     <div class="container py-5">
+     <div class="container py-5" data-aos="fade-up"
+     data-aos-anchor-placement="top-bottom">
         <div class="row">
           <div class="col-12 col-sm-12 col-md-6">
             <img
