--- a/html/contact.html
+++ b/html/contact.html
@@ -3,36 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Restyle - Achetez et vendez des articles de seconde main avec style. Découvrez des produits uniques et abordables pour un mode de vie durable."
-    />
-    <meta property="og:title" content="Restyle - Articles de Seconde Main" />
-    <meta
-      property="og:description"
-      content="Trouvez des vêtements, accessoires et bien plus encore. Restyle, votre plateforme dédiée au seconde main."
-    />
-    <meta
-      property="og:image"
-      content="https://www.restyle.com/images/preview.jpg"
-    />
-    <meta property="og:url" content="https://www.restyle.com" />
-    <meta property="og:type" content="website" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="Restyle - Achetez et vendez avec style"
-    />
-    <meta
-      name="twitter:description"
-      content="Un large choix d'articles de seconde main pour un avenir plus vert. Rejoignez la communauté Restyle."
-    />
-    <meta
-      name="twitter:image"
-      content="https://www.restyle.com/images/twitter-preview.jpg"
-    />
+    <title>Contactez Restyle - Support et Ressources d'Aide</title>
+    <meta name="description" content="Besoin d'aide ? Contactez l'équipe Restyle ou consultez notre FAQ pour des réponses rapides à vos questions. Nous sommes là pour vous aider !">
+    
+    <!-- Balises Open Graph (pour les réseaux sociaux) -->
+    <meta property="og:title" content="Contactez Restyle - Support et Ressources d'Aide">
+    <meta property="og:description" content="Accédez à notre FAQ ou contactez notre support pour toute question sur l'utilisation de la plateforme Restyle. Nous sommes à votre écoute.">
+    <meta property="og:image" content="https://www.restyle.com/images/contact-support.jpg">
+    <meta property="og:url" content="https://www.restyle.com/contact">
+    <meta property="og:type" content="website">
+    
+    <!-- Balises Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Contactez Restyle - Support et Ressources d'Aide">
+    <meta name="twitter:description" content="Trouvez des réponses rapides dans notre FAQ ou contactez notre équipe via le formulaire en ligne. Restyle est là pour vous aider !">
+    <meta name="twitter:image" content="https://www.restyle.com/images/contact-support.jpg">
 
     <link rel="icon" type="image/png" href="../img/logo.png" />
     <!---------------------------------------------------------- LIENS --------------------------------------------------------->
