--- a/html/saccuir.html
+++ b/html/saccuir.html
@@ -3,36 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Restyle - Achetez et vendez des articles de seconde main avec style. Découvrez des produits uniques et abordables pour un mode de vie durable."
-    />
-    <meta property="og:title" content="Restyle - Articles de Seconde Main" />
-    <meta
-      property="og:description"
-      content="Trouvez des vêtements, accessoires et bien plus encore. Restyle, votre plateforme dédiée au seconde main."
-    />
-    <meta
-      property="og:image"
-      content="https://www.restyle.com/images/preview.jpg"
-    />
-    <meta property="og:url" content="https://www.restyle.com" />
-    <meta property="og:type" content="website" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="Restyle - Achetez et vendez avec style"
-    />
-    <meta
-      name="twitter:description"
-      content="Un large choix d'articles de seconde main pour un avenir plus vert. Rejoignez la communauté Restyle."
-    />
-    <meta
-      name="twitter:image"
-      content="https://www.restyle.com/images/twitter-preview.jpg"
-    />
+    <title>Sacs en Cuir d'Occasion - Restyle</title>
+<meta name="description" content="Découvrez une sélection de sacs en cuir d'occasion élégants et abordables sur Restyle. Offrez-vous un style unique à petit prix.">
+
+<!-- Balises Open Graph (pour les réseaux sociaux) -->
+<meta property="og:title" content="Sacs en Cuir d'Occasion - Restyle">
+<meta property="og:description" content="Offrez-vous un sac en cuir intemporel sans casser votre budget. Parcourez les meilleures offres sur Restyle, la plateforme de seconde main.">
+<meta property="og:image" content="https://www.restyle.com/images/sacs-cuir.jpg">
+<meta property="og:url" content="https://www.restyle.com/sacs-cuir">
+<meta property="og:type" content="website">
+
+<!-- Balises Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Sacs en Cuir d'Occasion - Restyle">
+<meta name="twitter:description" content="Ajoutez une touche de sophistication à votre look avec un sac en cuir d'occasion. Explorez nos offres exclusives sur Restyle.">
+<meta name="twitter:image" content="https://www.restyle.com/images/sacs-cuir.jpg">
     <!---------------------------------------------------------- LIENSSSSSSSSSSSSSSS --------------------------------------------------------->
     <link rel="icon" type="image/png" href="../img/logo.png" />
 
