--- a/html/vase.html
+++ b/html/vase.html
@@ -3,36 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Restyle - Achetez et vendez des articles de seconde main avec style. Découvrez des produits uniques et abordables pour un mode de vie durable."
-    />
-    <meta property="og:title" content="Restyle - Articles de Seconde Main" />
-    <meta
-      property="og:description"
-      content="Trouvez des vêtements, accessoires et bien plus encore. Restyle, votre plateforme dédiée au seconde main."
-    />
-    <meta
-      property="og:image"
-      content="https://www.restyle.com/images/preview.jpg"
-    />
-    <meta property="og:url" content="https://www.restyle.com" />
-    <meta property="og:type" content="website" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="Restyle - Achetez et vendez avec style"
-    />
-    <meta
-      name="twitter:description"
-      content="Un large choix d'articles de seconde main pour un avenir plus vert. Rejoignez la communauté Restyle."
-    />
-    <meta
-      name="twitter:image"
-      content="https://www.restyle.com/images/twitter-preview.jpg"
-    />
+    <title>Vases en Céramique d'Occasion - Restyle</title>
+    <meta name="description" content="Ajoutez une touche d'élégance à votre intérieur avec nos vases en céramique d'occasion. Styles uniques et prix abordables disponibles sur Restyle.">
+    
+    <!-- Balises Open Graph (pour les réseaux sociaux) -->
+    <meta property="og:title" content="Vases en Céramique d'Occasion - Restyle">
+    <meta property="og:description" content="Découvrez une collection exceptionnelle de vases en céramique d'occasion. Donnez du caractère à votre décoration intérieure à petit prix.">
+    <meta property="og:image" content="https://www.restyle.com/images/vases-ceramique.jpg">
+    <meta property="og:url" content="https://www.restyle.com/vases-ceramique">
+    <meta property="og:type" content="website">
+    
+    <!-- Balises Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Vases en Céramique d'Occasion - Restyle">
+    <meta name="twitter:description" content="Trouvez le vase en céramique parfait pour sublimer votre intérieur. Collection exclusive d'articles de seconde main sur Restyle.">
+    <meta name="twitter:image" content="https://www.restyle.com/images/vases-ceramique.jpg">
     <!---------------------------------------------------------- LIENSSSSSSSSSSSSSSS --------------------------------------------------------->
     <link rel="icon" type="image/png" href="../img/logo.png" />
 
