--- a/html/chausel.html
+++ b/html/chausel.html
@@ -3,36 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Restyle - Achetez et vendez des articles de seconde main avec style. Découvrez des produits uniques et abordables pour un mode de vie durable."
-    />
-    <meta property="og:title" content="Restyle - Articles de Seconde Main" />
-    <meta
-      property="og:description"
-      content="Trouvez des vêtements, accessoires et bien plus encore. Restyle, votre plateforme dédiée au seconde main."
-    />
-    <meta
-      property="og:image"
-      content="https://www.restyle.com/images/preview.jpg"
-    />
-    <meta property="og:url" content="https://www.restyle.com" />
-    <meta property="og:type" content="website" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="Restyle - Achetez et vendez avec style"
-    />
-    <meta
-      name="twitter:description"
-      content="Un large choix d'articles de seconde main pour un avenir plus vert. Rejoignez la communauté Restyle."
-    />
-    <meta
-      name="twitter:image"
-      content="https://www.restyle.com/images/twitter-preview.jpg"
-    />
+    <title>Chaussures Élégantes - Confort et Style Intemporel</title>
+<meta name="description" content="Découvrez notre collection de chaussures élégantes, parfaites pour toutes les occasions. Confortables, raffinées et adaptées à chaque style. Commandez dès maintenant !">
+
+<!-- Balises Open Graph (pour les réseaux sociaux) -->
+<meta property="og:title" content="Chaussures Élégantes - Confort et Style Intemporel">
+<meta property="og:description" content="Explorez notre gamme de chaussures élégantes pour un look sophistiqué et intemporel. Idéales pour le travail, les sorties ou les occasions spéciales.">
+<meta property="og:image" content="https://www.exemple.com/images/chaussures-elegantes.jpg">
+<meta property="og:url" content="https://www.exemple.com/chaussures-elegantes">
+<meta property="og:type" content="website">
+
+<!-- Balises Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Chaussures Élégantes - Confort et Style Intemporel">
+<meta name="twitter:description" content="Une collection de chaussures élégantes qui allie confort et design. Découvrez nos modèles les plus populaires !">
+<meta name="twitter:image" content="https://www.exemple.com/images/chaussures-elegantes.jpg">
     <!---------------------------------------------------------- LIENSSSSSSSSSSSSSSS --------------------------------------------------------->
     <link rel="icon" type="image/png" href="../img/logo.png" />
 
