--- a/html/profil.html
+++ b/html/profil.html
@@ -3,35 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Profil Utilisateur - Restyle</title>
     <meta
       name="description"
-      content="Restyle - Achetez et vendez des articles de seconde main avec style. Découvrez des produits uniques et abordables pour un mode de vie durable."
+      content="Gérez votre profil sur Restyle : visualisez vos annonces publiées, consultez votre historique, et mettez à jour vos informations personnelles en toute simplicité."
     />
-    <meta property="og:title" content="Restyle - Articles de Seconde Main" />
+
+    <!-- Balises Open Graph (pour les réseaux sociaux) -->
+    <meta property="og:title" content="Profil Utilisateur - Restyle" />
     <meta
       property="og:description"
-      content="Trouvez des vêtements, accessoires et bien plus encore. Restyle, votre plateforme dédiée au seconde main."
+      content="Accédez à votre espace utilisateur sur Restyle. Consultez vos annonces publiées et gérez vos informations personnelles facilement."
     />
     <meta
       property="og:image"
-      content="https://www.restyle.com/images/preview.jpg"
+      content="https://www.restyle.com/images/profil-utilisateur.jpg"
     />
-    <meta property="og:url" content="https://www.restyle.com" />
+    <meta property="og:url" content="https://www.restyle.com/profil" />
     <meta property="og:type" content="website" />
+
+    <!-- Balises Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="Restyle - Achetez et vendez avec style"
-    />
+    <meta name="twitter:title" content="Profil Utilisateur - Restyle" />
     <meta
       name="twitter:description"
-      content="Un large choix d'articles de seconde main pour un avenir plus vert. Rejoignez la communauté Restyle."
+      content="Votre espace personnel sur Restyle. Gagnez en autonomie avec un profil simple et intuitif."
     />
     <meta
       name="twitter:image"
-      content="https://www.restyle.com/images/twitter-preview.jpg"
+      content="https://www.restyle.com/images/profil-utilisateur.jpg"
     />
     <!---------------------------------------------------------- LIENSSSSSSSSSSSSSSS --------------------------------------------------------->
     <link rel="icon" type="image/png" href="../img/logo.png" />
