--- a/html/catalogue.html
+++ b/html/catalogue.html
@@ -3,16 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- Meta Title -->
     <title>Catalogue ReStyle - Produits de Seconde Main : Mode, Accessoires et Décoration</title>
-   <!-- Meta Description -->
-  <meta name="description" content="Découvrez le catalogue ReStyle : vêtements, accessoires et décorations de seconde main. Des produits uniques, éco-responsables et abordables."/>
+   
+    <!-- Meta Description -->
+   <meta name="description" content="Découvrez le catalogue ReStyle : vêtements, accessoires et décorations de seconde main. Des produits uniques, éco-responsables et abordables."/>
     />
+    
     <!-- Open Graph Meta Tags -->
-  <meta property="og:title" content="Catalogue ReStyle - Produits de Seconde Main : Mode, Accessoires et Décoration" />
-  <meta property="og:description" content="Parcourez le catalogue ReStyle : vêtements, accessoires et décorations de seconde main. Adoptez un style unique et responsable." />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.restyle.com/catalogue" />
-  <meta property="og:image" content="https://www.restyle.com/images/catalogue-og-image.jpg" />
+   <meta property="og:title" content="Catalogue ReStyle - Produits de Seconde Main : Mode, Accessoires et Décoration" />
+   <meta property="og:description" content="Parcourez le catalogue ReStyle : vêtements, accessoires et décorations de seconde main. Adoptez un style unique et responsable." />
+   <meta property="og:type" content="website" />
+   <meta property="og:url" content="https://www.restyle.com/catalogue" />
+   <meta property="og:image" content="https://www.restyle.com/images/catalogue-og-image.jpg" />
 
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
@@ -22,10 +26,8 @@
 
   <!-- Robots -->
   <meta name="robots" content="index, follow" />
-</head>
-    />
 
-    <link rel="icon" type="image/png" href="../img/logo.png" />
+  <link rel="icon" type="image/png" href="../img/logo.png" />
     <!---------------------------------------------------------- LIENS --------------------------------------------------------->
     <!-- Bootstrap -->
     <link
