--- a/html/catalogue.html
+++ b/html/catalogue.html
@@ -213,10 +213,11 @@
                 class="form-control"
                 placeholder="Rechercher un produit..." style="color: #333333!important;"
                 aria-label="Search"
-              />
-              <button class="btn btn-outline-light" type="button">
-                <i class="fa-solid fa-magnifying-glass" id="chaussure"></i>
-              </button>
+                />
+                <button class="btn btn-outline-light" type="button">
+                    <i class="fa-solid fa-magnifying-glass" id="chaussure"></i>
+                </button> 
+             </div>
             </div>
           </form>
         </section>
@@ -323,8 +324,6 @@
                 </div>
               </div>
             </div>
-          </div>
-        </div>
 
             <!-- Produit 6 -->
             <div class="col-12 col-md-6 col-lg-3" data-aos="fade-up" data-aos-duration="600">
@@ -475,6 +474,16 @@
           <h5 class="product-card-title">Vase en céramique</h5>
           <button class="btn-favorite"><i class="fas fa-star"></i></button>
         </div>
+        <p class="category-label">Catégorie: Décoration</p>
+        <p class="product-price">34,99€</p>
+        <p class="product-condition">État : <span class="condition-label">Très bon état</span></p>
+        <div class="d-flex justify-content-between align-items-center">
+          <div></div>
+          <a href="vase.html"><button class="btn-cta">Voir le produit</button></a>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- Produit 14 -->
 <div class="col-12 col-md-6 col-lg-3" data-aos="fade-up" data-aos-duration="1400">
@@ -539,71 +548,8 @@
 </section>
 </main>
 
-        <!-- Produit 15 -->
-        <div
-          class="col-12 col-md-6 col-lg-3"
-          data-aos="fade-up"
-          data-aos-duration="1500"
-        >
-          <div class="card product-card">
-            <img
-              src="../img/catalogue/telephone.jpg"
-              alt="Téléphone vintage rose"
-            />
-            <div class="p-3">
-              <div class="d-flex justify-content-between align-items-center">
-                <h5 class="product-card-title">Téléphone vintage rose</h5>
-                <button class="btn-favorite">
-                  <i class="fas fa-star"></i>
-                </button>
-              </div>
-              <p class="category-label">Catégorie: Décration</p>
-              <p class="product-price">399,99€</p>
-              <p class="product-condition">
-                État : <span class="condition-label">Bon état</span>
-              </p>
-              <!-- Alignement du bouton "Voir le produit" à droite -->
-              <div class="text-end">
-                <button class="btn-cta">Voir le produit</button>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Produit 16 -->
-        <div
-          class="col-12 col-md-6 col-lg-3"
-          data-aos="fade-up"
-          data-aos-duration="1600"
-        >
-          <div class="card product-card">
-            <img
-              src="../img/catalogue/miroir.jpg"
-              alt="Miroir vintage en bois"
-            />
-            <div class="p-3">
-              <div class="d-flex justify-content-between align-items-center">
-                <h5 class="product-card-title">Miroir vintage</h5>
-                <button class="btn-favorite">
-                  <i class="fas fa-star"></i>
-                </button>
-              </div>
-              <p class="category-label">Catégorie: Décoration</p>
-              <p class="product-price">99,99€</p>
-              <p class="product-condition">
-                État : <span class="condition-label">Très bon état</span>
-              </p>
-              <!-- Alignement du bouton "Voir le produit" à droite -->
-              <div class="text-end">
-                <button class="btn-cta">Voir le produit</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-    </main>
-
-    <!------------------------------------------------------------------ FIN MAIN -------------------------------------------------------->
+              
+     <!------------------------------------------------------------------ FIN MAIN -------------------------------------------------------->
 
     <div class="parallaxv" style="min-height: 200px"></div>
     <!------------------------------------------------------------------ FIN MAIN -------------------------------------------------------->
