--- a/html/catalogue.html
+++ b/html/catalogue.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- Meta Title -->
-    <title>Catalogue ReStyle - Produits de Seconde Main : Mode, Accessoires et Décoration</title>
+    <title>Catalogue ReStyle | Produits de Seconde Main : Mode, Accessoires et Décoration</title>
    
     <!-- Meta Description -->
    <meta name="description" content="Découvrez le catalogue ReStyle : vêtements, accessoires et décorations de seconde main. Des produits uniques, éco-responsables et abordables."/>
     />
     
     <!-- Open Graph Meta Tags -->
-   <meta property="og:title" content="Catalogue ReStyle - Produits de Seconde Main : Mode, Accessoires et Décoration" />
+   <meta property="og:title" content="Catalogue ReStyle | Produits de Seconde Main : Mode, Accessoires et Décoration" />
    <meta property="og:description" content="Parcourez le catalogue ReStyle : vêtements, accessoires et décorations de seconde main. Adoptez un style unique et responsable." />
    <meta property="og:type" content="website" />
    <meta property="og:url" content="https://www.restyle.com/catalogue" />
