--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Restyle - Achetez et vendez des articles de seconde main avec style. Découvrez des produits uniques et abordables pour un mode de vie durable."
+      content="Restyle - Achetez et vendez des articles de seconde main avec style. Découvrez des produits uniques et abordables."
     />
     <meta property="og:title" content="Restyle - Articles de Seconde Main" />
     <meta
@@ -18,7 +18,7 @@
       property="og:image"
       content="https://www.restyle.com/images/preview.jpg"
     />
-    <meta property="og:url" content="https://www.restyle.com" />
+    <meta property="og:url" content="https://www.re-style.fr" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta
@@ -31,7 +31,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://www.restyle.com/images/twitter-preview.jpg"
+      content="https://www.re-style.fr/images/twitter-preview.jpg"
     />
     <!---------------------------------------------------------- LIENSSSSSSSSSSSSSSS --------------------------------------------------------->
     <link rel="icon" type="image/png" href="img/logo.png" />
@@ -65,7 +65,6 @@
 
     <link rel="stylesheet" href="css/style.css" />
     <title>Restyle - Articles de Seconde Main</title>
-    <title>Document</title>
   </head>
   <body>
     <!------------------------------------------------------------------ NAVBAR -------------------------------------------------------->
@@ -75,7 +74,7 @@
       <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand logo" href="index.html">
-            <img src="img/logo.png" alt="Bootstrap" width="70" height="auto" />
+            <img src="img/logo.png" alt="logo" width="70" height="auto" />
           </a>
 
           <button
@@ -257,7 +256,11 @@
         <!-- Slides -->
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="5000">
-            <img src="img/index/filleshp.jpg" class="d-block w-100" alt="..." />
+            <img
+              src="img/index/filleshp.jpg"
+              class="d-block w-100"
+              alt="femme qui tiens un t-shirt"
+            />
             <div
               class="carousel-caption d-block d-md-block textcarous d-flex flex-column align-items-center justify-content-center"
             >
@@ -269,7 +272,7 @@
             <img
               src="img/index/jeanspull.jpg"
               class="d-block w-100"
-              alt="..."
+              alt="t-shirt en laine"
             />
             <div
               class="carousel-caption d-block d-md-block textcarous d-flex flex-column align-items-center justify-content-center"
@@ -282,7 +285,7 @@
             <img
               src="img/index/accessoires.jpg"
               class="d-block w-100"
-              alt="..."
+              alt="sac Chloé"
             />
             <div
               class="carousel-caption d-block d-md-block textcarous d-flex flex-column align-items-center justify-content-center"
