--- a/html/chausel.html
+++ b/html/chausel.html
@@ -40,8 +40,6 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="../css/produits.css" />
-    <title>Restyle - Articles de Seconde Main</title>
-    <title>Document</title>
   </head>
   <body>
     <!------------------------------------------------------------------ NAVBAR -------------------------------------------------------->
@@ -51,7 +49,7 @@
       <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand logo" href="../index.html">
-            <img src="../img/logo.png" alt="Bootstrap" width="70" height="auto" />
+            <img src="../img/logo.png" alt="logo" width="70" height="auto" />
           </a>
 
           <button
@@ -182,7 +180,7 @@
                 <i class="bi bi-cart"></i> Acheter
               </button>
               <button class="btn btn-outline-light  btn-lg">
-                <i class="fa-solid fa-star"></i> Ajouter à la wishlist
+                <i class="fa-solid fa-star"></i> Ajouter aux favoris
               </button>
             </div>
               
