--- a/html/contact.html
+++ b/html/contact.html
@@ -55,7 +55,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
           <div class="container-fluid">
             <a class="navbar-brand logo" href="../index.html">
-              <img src="../img/logo.png" alt="Bootstrap" width="70" height="auto" />
+              <img src="../img/logo.png" alt="logo" width="70" height="auto" />
             </a>
   
             <button
