--- a/html/profil.html
+++ b/html/profil.html
@@ -55,8 +55,6 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="../css/profil.css" />
-    <title>Restyle - Articles de Seconde Main</title>
-    <title>Document</title>
   </head>
   <body>
     <!------------------------------------------------------------------ NAVBAR -------------------------------------------------------->
@@ -66,12 +64,7 @@
       <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand logo" href="../index.html">
-            <img
-              src="../img/logo.png"
-              alt="Bootstrap"
-              width="70"
-              height="auto"
-            />
+            <img src="../img/logo.png" alt="logo" width="70" height="auto" />
           </a>
 
           <button
